fix on tablet

--- a/css/style.scss
+++ b/css/style.scss
@@ -932,114 +932,6 @@ footer {
         height: 80vh !important;
     }
 }
-@media screen and (min-width: 1024px) and (max-width: 1366px) {
-    body {
-        > * {
-            padding-left: 5% !important;
-            padding-right: 5% !important;
-        }
-    }
-    .header {
-        ul.header-links {
-            display: block;
-            li {
-                margin-left: 10px !important;
-            }
-        }
-        #header__menu {
-            display: none;
-        }
-    }
-    .banner {
-        height: 55vh !important;
-        .banner-content {
-            padding-left: 0 !important;
-            padding-right: 0 !important;
-            .banner-text {
-                flex-basis: 100%;
-                .banner__text-des {
-                    margin-top: 50px;
-                }
-                .banner__text-menu {
-                    width: 50%;
-                    margin: 0 auto;
-                }
-            }
-            .banner-img {
-                display: none;
-            }
-        }
-    }
-    .about-us {
-        .row-1 {
-            .r1-col2 {
-                img:nth-child(1) {
-                    top: 0 !important;
-                    left: 5% !important;
-                }
-                img:nth-child(2) {
-                    top: 25% !important;
-                    left: 45% !important;
-                    max-width: 40% !important;
-                    max-height: 40% !important;
-                }
-                img:nth-child(3) {
-                    top: 65% !important;
-                    left: 5% !important;
-                    max-width: 35% !important;
-                    max-height: 35% !important;
-                }
-            }
-        }
-        .row-2 {
-            .r2-col1 {
-                flex-basis: 50% !important;
-                img {
-                    max-width: 100% !important;
-                    max-height: 100% !important;
-                }
-            }
-            .r2-col2 {
-                border-radius: 10px;
-                button {
-                    display: block;
-                    margin: 0 auto;
-                }
-            }
-        }
-    }
-    .news {
-        display: flex;
-        justify-content: space-between;
-        height: auto !important;
-        padding-bottom: 30px !important;
-        .news-img {
-            div {
-                width: 30% !important;
-                &:nth-child(1) {
-                    left: 5% !important;
-                }
-                &:nth-child(2) {
-                    left: 15% !important;
-                }
-                &:nth-child(3) {
-                    left: 55% !important;
-                }
-                &:nth-child(4) {
-                    left: 55% !important;
-                }
-            }
-        }
-    }
-    .customers {
-        height: 45vh !important;
-    }
-    footer {
-        .footer-row1 {
-            padding: 30px 5% !important;
-        }
-    }
-}
 /* ------------- iPhone 5s ------------- */
 @media screen and (max-width: 320px) {
     .banner {
